--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
+    "start": "node -r ts-node/register src/run.ts",
     "test": "mocha -r ts-node/register test/**/*.ts"
   },
   "author": "Shiv Jha-Mathur",
